2004-09-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/AlgorithmParameterGeneratorSpi.java:
        Replaced by implementation from GNU Classpath.


2004-09-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/security/provider/SHA1PRNG.java:
	New file, taken from GNU Classpath.

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/all.files:
	Regenerated.

	* libraries/javalib/java/security/SecureRandom.java:
        Replaced by implementation from GNU Classpath.

2004-09-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/SecureRandomSpi.java:
        Replaced by implementation from GNU Classpath.

2004-09-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/SecurityPermission.java:
        Replaced by implementation from GNU Classpath.

2004-09-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/Provider.java:
        Replaced by implementation from GNU Classpath.

2004-09-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/KeyPair.java:
        Replaced by implementation from GNU Classpath.

2004-09-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/GuardedObject.java:
        Replaced by implementation from GNU Classpath.

2004-09-21  Noa Resare  <noa@resare.com>

	* libraries/clib/nio/FileChannelImpl.c
	(Java_gnu_java_nio_channels_FileChannelImpl_implTruncate):
	seek to new end of file when truncating the file (mirrors classpath)

2004-09-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/DigestOutputStream.java:
        Replaced by implementation from GNU Classpath.

2004-09-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/security/DigestInputStream.java:
        Replaced by implementation from GNU Classpath.

2004-09-21  Dalibor Topic  <robilad@kaffe.org>

	*  libraries/javalib/java/security/BasicPermission.java